--- a/processing_scripts/Sulfate_Chloride/2023/COMPASS_TEMPEST_Collate_Dionex_2023_Data.Rmd
+++ b/processing_scripts/Sulfate_Chloride/2023/COMPASS_TEMPEST_Collate_Dionex_2023_Data.Rmd
@@ -7,6 +7,16 @@ output: html_document
 
 ```{r}
 Sample_Year = "2023"
+Run_notes = "Some sample IDs are missing from metadata: 
+TMP_SW_H6_20230612
+TMP_FW_F6_20230606
+TMP_SW_E5_20230606
+TMP_SW_F6_202311
+TMP_SW_B4_202311
+TMP_SW_H6_202311
+TMP_AQUIFER_SAMPLE_A
+TMP_AQUIFER_SAMPLE_B
+TMP_AQUIFER_SAMPLE_C"
 ```
 
 ```{r setup, include=FALSE}
@@ -44,6 +54,10 @@ all_data <- files %>%
 
 all_data <- all_data[, -which(names(all_data) == "X")]
 
+#remove duplicates from the sample dataframe bc we are just taking the first dup run
+all_data <- all_data %>%
+  filter(!str_detect(Sample_ID, "spk"))
+
 colnames(all_data)
 
 ##Add Time of Day column (AM < 1200, PM > 1200)
@@ -51,14 +65,37 @@ all_data$Time <- as.numeric(all_data$Time)
 ##Change "Source" to "Sourcewater" 
 all_data$Grid <- replace(all_data$Grid, all_data$Grid == "SOURCE", "SOURCEWATER")
 
+##For 20230607, need to change times to AM or PM in Sample ID
 all_data1 <- all_data %>% 
   mutate(
     Project = "TMP", 
     Time_of_day = ifelse(Time<1200, "AM", "PM"), 
-    Sample_ID = paste(Project, Plot, Grid, Date, Time, sep = "_")
+    Sample_ID = paste(Project, Plot, Grid, Date, Time_of_day, sep = "_")
   )
 
 all_data1$Sample_ID <- gsub("_NA", "", all_data1$Sample_ID)
+all_data_nsw <- subset(all_data1, Grid != "SOURCEWATER")
+
+##For Sourcewater samples, need to code source samples as T1-3 based on earliest to latest times
+all_data_sw <- subset(all_data1, Grid == "SOURCEWATER")
+
+all_data_sw <- all_data_sw %>% 
+  group_by(Plot, Date) %>% 
+  arrange(Time, .by_group = TRUE) %>% # Sort by Time ascending
+  mutate(Event_Time = paste0("T", row_number())) %>% 
+  ungroup()
+  
+all_data_sw <- all_data_sw %>% 
+  mutate(
+    Sample_ID = paste(Project, Plot, Grid, Date, Event_Time, sep = "_")
+  )
+
+all_data2 <- bind_rows(all_data_sw, all_data_nsw)
+
+colnames(all_data2)
+
+all_data3 <- all_data2 %>% 
+  select("Sample_ID", "SO4_ppm", "SO4_Area", "Cl_ppm", "Cl_Area", "SO4_mM", "Cl_mM", "salinity", "Time")
 
 ```
 
@@ -84,55 +121,35 @@ raw_metadata_sw <- read_excel("TEMPEST_PorewaterInventory_May2022_Present.xlsx",
 ##Create similar sample IDs to match with run samples 
 ```{r pull in metadata for later, include=FALSE}
 
+###LYSIMETER SAMPLES###
 #select SO4/Cl samples 
 raw_metadata_lys <- subset(raw_metadata_lys, Analyte == "SO4/Cl/H2S")
 
-#select 2024 samples
+#select 2023 samples
 raw_metadata_lys_year <- raw_metadata_lys %>%  
   filter(str_detect(Sample_ID, Sample_Year))
 
-#select event samples 
-raw_metadata_lys_event <- raw_metadata_lys_year %>%  
-  filter(str_detect(Sample_ID, "_T"))
-
-#separate event samples into columns
-raw_metadata_lys_event <- raw_metadata_lys_event %>%
+#separate samples into columns
+raw_metadata_lys_year <- raw_metadata_lys_year %>%
   separate(
     col = Sample_ID,
     sep = "_",
-    into = c("Project", "Zone", "Source" ,"Grid", "Depth", "Analyte", "Event_Time", "Collection_Date", "Time_of_day"),
+    into = c("Project", "Zone", "Source" ,"Grid", "Depth", "Analyte", "Collection_Date", "Time_of_day"),
     remove = FALSE)
-
-#select non-event samples 
-raw_metadata_lys_monmon <- raw_metadata_lys_year %>%  
-  filter(!str_detect(Sample_ID, "_T"))
-
-#separate non-event samples into columns
-raw_metadata_lys_monmon <- raw_metadata_lys_monmon %>%
-  separate(
-    col = Sample_ID,
-    sep = "_",
-    into = c("Project", "Zone", "Source" ,"Grid", "Depth", "Analyte", "Collection_Date", "Event_Time", "Time_of_day"),
-    remove = FALSE)
-
-#combine event and non-event samples 
-raw_metadata_lys_combined <- rbind(raw_metadata_lys_event, raw_metadata_lys_monmon)
-raw_metadata_lys_combined <- raw_metadata_lys_combined %>%
-  select("Sample_ID", "Project", "Zone", "Source" ,"Grid", "Depth", "Analyte", "Collection_Date", "Collection_End_Time_24hrs", "Event_Time", "Time_of_day", "Volume_mL", "Notes")
-
 
 #create IDs from what was collected for comparison later
-raw_metadata_lys_combined <- raw_metadata_lys_combined %>%
+raw_metadata_lys_ids <- raw_metadata_lys_year %>%
   mutate(Cl_SO4_ID = paste(Project,
                           Zone,
                           Grid,
-                          Collection_Date, 
-                          Collection_End_Time_24hrs, 
+                          Collection_Date_YYYYMMDD, 
+                          Time_of_day, 
                           sep = "_"))
 
-raw_metadata_lys_combined$Cl_SO4_ID <- gsub("_NA", "", raw_metadata_lys_combined$Cl_SO4_ID)
+raw_metadata_lys_ids$Cl_SO4_ID <- gsub("_NA", "", raw_metadata_lys_ids$Cl_SO4_ID)
 
 
+###SOURCEWATER SAMPLES###
 #select SO4/Cl samples 
 raw_metadata_sw <- raw_metadata_sw %>%  
   filter(str_detect(Sample_ID, "SO4"))
@@ -149,29 +166,28 @@ raw_metadata_sw_sw <- raw_metadata_sw_year %>%
     into = c("Project", "Source", "Zone", "Event_Time", "Analyte", "Collection_Date", "Time_of_day"),
     remove = FALSE)
 
-raw_metadata_sw_combined <- raw_metadata_sw_sw %>%
-  rename("Notes" = "Notes:", "Collection_End_Time_24hrs" = "Collection_Time_24hrs") %>%
-  select("Sample_ID", "Project", "Zone", "Source", "Analyte", "Collection_Date", "Collection_End_Time_24hrs", "Event_Time", "Time_of_day", "Volume_mL", "Notes")
-
 #change "Source" to "Sourcewater" 
-raw_metadata_sw_combined$Source <- replace(raw_metadata_sw_combined$Source, raw_metadata_sw_combined$Source == "Source", "SourceWater")
+raw_metadata_sw_sw$Source <- replace(raw_metadata_sw_sw$Source, raw_metadata_sw_sw$Source == "Source", "SourceWater")
 
 #create IDs from what was collected for comparison later
-raw_metadata_sw_combined <- raw_metadata_sw_combined %>%
+raw_metadata_sw_combined <- raw_metadata_sw_sw %>%
   mutate(Cl_SO4_ID = paste(Project,
                           Zone,
                           Source, 
                           Collection_Date, 
-                          Collection_End_Time_24hrs, 
-                          sep = "_"))
+                          Event_Time, 
+                          sep = "_")) %>%
+  rename("Notes" = "Notes:")
 
 
 
 #combine porewater and sourcewater samples
-dionex_metadata <- bind_rows(raw_metadata_lys_combined, raw_metadata_sw_combined)
+dionex_metadata <- bind_rows(raw_metadata_lys_ids, raw_metadata_sw_combined)
 
 #remove old ID's
 dionex_metadata$Sample_ID <- NULL
+
+colnames(dionex_metadata)
 
 # head(dionex_metadata)
 
@@ -181,15 +197,11 @@ dionex_metadata$Sample_ID <- NULL
 ## Check to see if samples run match metadata & merge info
 ```{r check sample ids with metadata, echo=FALSE, warning = FALSE}
 
-#remove duplicates from the sample dataframe bc we are just taking the first dup run
-all_data <- all_data %>%
-  filter(!str_detect(Sample_ID, "spk"))
-
 #check to see if all samples are present in the metadata 
-all_data$Sample_ID <- toupper(all_data$Sample_ID)
+all_data3$Sample_ID <- toupper(all_data3$Sample_ID)
 dionex_metadata$Cl_SO4_ID <- toupper(dionex_metadata$Cl_SO4_ID)
 
-all_present <- all(all_data$Sample_ID %in% dionex_metadata$Cl_SO4_ID)
+all_present <- all(all_data3$Sample_ID %in% dionex_metadata$Cl_SO4_ID)
 
 if (all_present) {
   message("All sample IDs are present in metadata.")
@@ -197,23 +209,19 @@ if (all_present) {
   message("Some sample IDs are missing from metadata.")
   
   # Optional: Which ones are missing?
-  missing_ids <- setdiff(all_data$Sample_ID, dionex_metadata$Cl_SO4_ID)
+  missing_ids <- setdiff(all_data3$Sample_ID, dionex_metadata$Cl_SO4_ID)
   print(missing_ids)
 }
 
 
 #merge metadata with sample run data 
-merged_data <- all_data_flagged %>%
-  left_join(dionex_metadata, by = c("sample_ID" = "Cl_SO4_ID"))
+merged_data <- all_data3 %>%
+  left_join(dionex_metadata, by = c("Sample_ID" = "Cl_SO4_ID"))
 
+merged_data$Plot <- str_replace_all(merged_data$Plot, "Contol", "Control")
 
-df_all_clean <- merged_data %>%
-  separate(
-    col = sample_ID,
-    sep = "_",
-    into = c("Project", "Zone", "Grid", "Collection_Date", "Depth"),
-    remove = FALSE)
-
+merged_data$Sample_ID <- paste(merged_data$Sample_ID, merged_data$Depth, sep = "_")
+merged_data$Sample_ID <- gsub("_NA", "", merged_data$Sample_ID)
 
 ```
 
@@ -221,11 +229,16 @@ df_all_clean <- merged_data %>%
 ```{r Visualize Data, echo=FALSE, warning=FALSE}
 
 #Plot samples to get a first look at concentrations (sanity check)
-data_plotting <- df_all_clean
+data_plotting <- merged_data %>%
+  subset(!is.na(Plot))
 
 #Order by Zone from Upland to Surface Water
-data_plotting$Zone = factor(data_plotting$Zone, levels = c("C", "FW", "SW"))
-data_plotting <- data_plotting[order(data_plotting$Zone), ]
+unique(data_plotting$Plot)
+data_plotting$Plot = factor(data_plotting$Plot, levels = c("Control", "Freshwater", "Saltwater"))
+data_plotting <- data_plotting[order(data_plotting$Plot), ]
+
+data_plotting$SO4_ppm <- as.numeric(data_plotting$SO4_ppm)
+data_plotting$Cl_ppm <- as.numeric(data_plotting$Cl_ppm)
 
 #group the data for plotting
 data_plotting <- data_plotting %>%
@@ -233,13 +246,13 @@ data_plotting <- data_plotting %>%
   ungroup()
 
 #Plot data and change colors based on Zone:
-viz_cl_plot <- ggplot(data_plotting, aes(x = row_num, y = Cl_ppm, fill = Zone)) +
+viz_cl_plot <- ggplot(data_plotting, aes(x = row_num, y = Cl_ppm, fill = Plot)) +
   geom_bar(stat = "identity", position = position_dodge2(preserve = "single")) +
-  facet_wrap(~ Zone, scales="free") +
+  facet_wrap(~ Plot, scales="free") +
   scale_fill_manual(values = c(
-    "C" = "springgreen2",
-    "FW" = "cyan2",
-    "SW" = "violetred2"
+    "Control" = "springgreen2",
+    "Freshwater" = "cyan2",
+    "Saltwater" = "violetred2"
   )) +
   theme_classic() +
   theme(axis.text.x = element_blank()) +
@@ -247,13 +260,13 @@ viz_cl_plot <- ggplot(data_plotting, aes(x = row_num, y = Cl_ppm, fill = Zone)) 
   scale_x_discrete(drop = TRUE)
 
 
-viz_so4_plot <-  ggplot(data_plotting, aes(x = row_num, y = SO4_ppm, fill = Zone)) +
+viz_so4_plot <-  ggplot(data_plotting, aes(x = row_num, y = SO4_ppm, fill = Plot)) +
   geom_bar(stat = "identity", position = position_dodge2(preserve = "single")) +
-  facet_wrap(~ Zone, scales="free") +
+  facet_wrap(~ Plot, scales="free") +
   scale_fill_manual(values = c(
-    "C" = "springgreen2",
-    "FW" = "cyan2",
-    "SW" = "violetred2"
+    "Control" = "springgreen2",
+    "Freshwater" = "cyan2",
+    "Saltwater" = "violetred2"
   )) +
   theme_classic() +
   theme(axis.text.x = element_blank()) +
@@ -267,22 +280,22 @@ ggarrange(viz_cl_plot, viz_so4_plot, nrow=2, ncol=1)
 
 ## Write the 2023 file out to the folder 
 ```{r, echo=FALSE}
+colnames(merged_data)
 
-final_data <- all_data %>%
+final_data <- merged_data %>%
   mutate(
-    Depth_cm = NA, 
-    Event_Time = NA, 
-    Time_of_day = NA, 
-    Source = NA, 
-    Volume_mL = NA, 
+    Depth_cm = Depth, 
     SO4_Conc_flag = NA, 
     SO4_QAQC_flag = NA, 
     Cl_Conc_flag = NA, 
-    Cl_QAQC_flag = NA
+    Cl_QAQC_flag = NA, 
+    Analysis_rundate = NA, 
+    Run_notes = NA, 
+    Field_notes = Notes
   ) %>%
   rename(
-    Zone = Plot, 
-    Collection_Date = Date
+    SO4_Conc_mM = SO4_mM, 
+    Cl_Conc_mM = Cl_mM
   ) %>%
   select(
          Project, Zone, Grid, Depth_cm, Event_Time, Time_of_day, Source, 
@@ -292,7 +305,7 @@ final_data <- all_data %>%
         # list columns in the order you want them
   )
 
-write.csv(final_data, "COMPASS_SynopticCB_SO4_Cl_2024.csv")
+write.csv(final_data, "COMPASS_TEMPEST_SO4_Cl_2023.csv")
 
 ```
 
