Collated pH and SEAL data

--- a/processing_scripts/Sulfate_Chloride/2023/COMPASS_TEMPEST_Collate_Dionex_2023_Data.Rmd
+++ b/processing_scripts/Sulfate_Chloride/2023/COMPASS_TEMPEST_Collate_Dionex_2023_Data.Rmd
@@ -135,7 +135,8 @@ raw_metadata_lys_year <- raw_metadata_lys_year %>%
     col = Sample_ID,
     sep = "_",
     into = c("Project", "Zone", "Source" ,"Grid", "Depth", "Analyte", "Collection_Date", "Time_of_day"),
-    remove = FALSE)
+    remove = FALSE)%>%
+  rename(Evacuation_Date = Evacuation_date_YYYMMDD)
 
 #create IDs from what was collected for comparison later
 raw_metadata_lys_ids <- raw_metadata_lys_year %>%
@@ -299,7 +300,7 @@ final_data <- merged_data %>%
   ) %>%
   select(
          Project, Zone, Grid, Depth_cm, Event_Time, Time_of_day, Source, 
-         Volume_mL, Collection_Date, Sample_ID, 
+         Volume_mL, Collection_Date, Evacuation_Date, Sample_ID, 
          SO4_ppm, SO4_Conc_mM, SO4_Conc_flag, SO4_QAQC_flag, Cl_ppm, Cl_Conc_mM, Cl_Conc_flag, Cl_QAQC_flag, salinity,
          Analysis_rundate,  Run_notes, Field_notes
         # list columns in the order you want them
