--- a/processing_scripts/Nutrients/2023/COMPASS_TEMPEST_Collate_NUTR_2023_Data.Rmd
+++ b/processing_scripts/Nutrients/2023/COMPASS_TEMPEST_Collate_NUTR_2023_Data.Rmd
@@ -8,17 +8,11 @@ output: html_document
 ```{r}
 Sample_Year = "2023"
 Run_notes = "Some sample IDs are missing from metadata:
-TMP_FW_SOURCEWATER_20230607_T4, TMP_AQUIFER_A_20230928, TMP_AQUIFER_A_20240124, TMP_AQUIFER_B_20230928,
-TMP_AQUIFER_B_20240124, TMP_AQUIFER_C_20230928, TMP_AQUIFER_C_20240124, TMP_C_C6_20230810,
-TMP_C_C6_20231211, TMP_C_I5_20230810, TMP_C_I5_20230828, TMP_FW_C3_20230710,
-TMP_FW_D5_20230710, TMP_FW_E3_20231211, TMP_FW_F4_20230710, TMP_FW_F4_20231211,
-TMP_FW_F6_20230810, TMP_FW_F6_20231211, TMP_FW_H6_20230710, TMP_FW_I5_20230710,
-TMP_SW_B4_20230810, TMP_SW_B4_20231211, TMP_SW_C6_20230810, TMP_SW_E3_20230810,
-TMP_SW_F4_20230810, TMP_SW_F6_20231211, TMP_SW_H3_20230810, TMP_SW_H6_20230810,
-TMP_C_C6_20230513, TMP_C_H6_20230513, TMP_FW_B4_20230513, TMP_FW_C3_20230513,
-TMP_FW_C6_20230513, TMP_FW_D5_20230513, TMP_FW_E3_20230513, TMP_FW_F6_20230513,
-TMP_FW_H3_20230518, TMP_FW_D5_202300606"
+TMP_FW_SOURCEWATER_20230607_T4, TMP_C_I5_20230828, TMP_C_C6_20230513, TMP_C_H6_20230513,             
+TMP_FW_B4_20230513, TMP_FW_C3_20230513, TMP_FW_C6_20230513, TMP_FW_D5_20230513,          
+TMP_FW_E3_20230513, TMP_FW_F6_20230513, TMP_SW_H6_20230606"
 ```
+
 
 ```{r setup, include=FALSE}
 
@@ -95,6 +89,20 @@ all_data3 <- all_data2 %>%
   select("Sample_ID", "NH3_uM", "PO4_uM",  "NOx_uM", "NH3_range", "PO4_range", "NOx_range", "Time")
 
 ```
+## Remove aquifer data and correct sample IDs
+```{r}
+
+##Extra Zero in Sample ID
+Old_ID_1 <- "TMP_FW_D5_202300606"
+New_ID_1 <- "TMP_FW_D5_20230606"
+all_data3$Sample_ID[all_data3$Sample_ID == Old_ID_1] <- New_ID_1
+
+##Remove Aquifer Data
+all_data3 <- all_data3 %>%  
+  filter(!str_detect(Sample_ID, c("AQUIFER"))) 
+
+
+```
 
 ## Pull in active porewater tracking inventory sheet from Google Drive: 
 ```{r rest of metadata, include=FALSE}
@@ -119,11 +127,11 @@ raw_metadata_sw <- read_excel("TEMPEST_PorewaterInventory_May2022_Present.xlsx",
 ```{r pull in metadata for later, include=FALSE}
 
 ###LYSIMETER SAMPLES###
-#select SO4/Cl samples 
-raw_metadata_lys <- subset(raw_metadata_lys, Analyte == "SO4/Cl/H2S")
+#select Nutrient samples 
+raw_metadata_lys_nutr <- subset(raw_metadata_lys, Analyte == "NUTR")
 
 #select 2023 samples
-raw_metadata_lys_year <- raw_metadata_lys %>%  
+raw_metadata_lys_year <- raw_metadata_lys_nutr %>%  
   filter(str_detect(Sample_ID, Sample_Year))
 
 #separate samples into columns
@@ -148,12 +156,12 @@ raw_metadata_lys_ids$Nutr_ID <- gsub("_NA", "", raw_metadata_lys_ids$Nutr_ID)
 
 
 ###SOURCEWATER SAMPLES###
-#select SO4/Cl samples 
-raw_metadata_sw <- raw_metadata_sw %>%  
-  filter(str_detect(Sample_ID, "SO4"))
+#select Nutrient samples 
+raw_metadata_sw_nutr <- raw_metadata_sw %>%  
+  filter(str_detect(Sample_ID, "NUTR"))
 
 #select 2023 samples
-raw_metadata_sw_year <- raw_metadata_sw %>%  
+raw_metadata_sw_year <- raw_metadata_sw_nutr %>%  
   filter(str_detect(Sample_ID, Sample_Year))
 
 #separate samples into columns
